--- a/NooroWeather/Development.xcconfig
+++ b/NooroWeather/Development.xcconfig
@@ -11,4 +11,4 @@
 WEATHER_SERVICE_SCHEME = https
 WEATHER_SERVICE_HOST = api.weatherapi.com
 WEATHER_SERVICE_PATH = /v1/current.json
-WEATHER_SERVICE_API_KEY = 7ae557f395f44dbf80674757241912
+WEATHER_SERVICE_API_KEY = <Enter API Key Here>
