--- a/NooroWeather/Release.xcconfig
+++ b/NooroWeather/Release.xcconfig
@@ -7,3 +7,8 @@
 
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
+
+WEATHER_SERVICE_SCHEME = https
+WEATHER_SERVICE_HOST = api.weatherapi.com
+WEATHER_SERVICE_PATH = /v1/current.json
+WEATHER_SERVICE_API_KEY = 
